Add retrieving page elements

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <script defer src="js/script.js"></script>
 </head>
 <body>
-    <div class="age"></div>
-    <div class="pathway"></div>
-    <div class="price"></div>
+    <div id="age"></div>
+    <div id="pathway"></div>
+    <div id="price"></div>
 </body>
 </html>
