Add print innertext

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <script defer src="js/script.js"></script>
 </head>
 <body>
-    <div id="age"></div>
-    <div id="pathway"></div>
-    <div id="price"></div>
+    <h1>age:<div id="age"></div></h1>
+    <h1>pathway:<div id="pathway"></div></h1>
+    <h1>price:<div id="price"></div></h1>
 </body>
 </html>
