--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 </head>
 <body>
     <div class="container-sm">
-        <div class="row">
-            <div class="col-10">
+        <div class="row justify-content-center">
+            <div class="col-10 col-md-8">
                 <header class="d-flex align-items-center px-4 text-white">
                     <i class="bi bi-train-front-fill"></i>
                     <h3 class="mb-0 ms-3">Train Ticket</h3>
@@ -32,7 +32,7 @@
                                     </ul>                              
                                                                        
                                 </div>
-                                <div class="col-4 border-start">
+                                <div class="col-4 border-start border-dark">
                                     
                                     <ul class="p-0">
                                         <li><p>Prezzo : 0.21&euro; km</p></li>
